--- a/package.json
+++ b/package.json
@@ -18,16 +18,11 @@
   },
   "homepage": "https://github.com/wellingt21/middle.messenger.praktikum.yandex#readme",
   "dependencies": {
-    "base": "^3.0.0",
-    "handlebars": "^4.7.7",
-    "parcel": "^2.8.2"
+    "express": "4.18.1",
+    "handlebars": "4.7.7"
   },
   "devDependencies": {
-    "parcel-transformer-hbs": "^1.0.4",
-    "postcss": "^8.4.20",
-    "postcss-css-variables": "^0.18.0",
-    "postcss-import": "^15.1.0",
-    "postcss-mixins": "^9.0.4",
-    "postcss-nesting": "^10.2.0"
-  }
+    "@parcel/transformer-postcss": "2.6.2"
+  },
+  "type": "module"
 }
