basic setup: add tailwind

--- a/.parcelrc
+++ b/.parcelrc
@@ -1,10 +1,11 @@
 {
-	"extends": "@parcel/config-default"
+	"extends": [
+		"@parcel/config-default"
+	],
 	"transformers": {
 		"*.hbs": [
-		  "parcel-transformer-hbs"
+		  "@anikin/parcel-transformer-handlebars-precompile"
 		],
-		"*.css": ["@parcel/optimizer-css"]
 	},
 	"optimizers": {
 		"*.css": ["@parcel/optimizer-css"]
