--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "praktikum",
   "version": "1.0.0",
   "description": " Sprint I ",
-  "main": "index.js",
+  "source": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rimraf dist && parcel build index.html",
+    "rebuild": "rimraf dist && rimraf node_modules && npm install && parcel build index.html",
+    "server": "node server.js",
+    "start": "npm run build && npm run server",
+    "dev": "parcel --port 5555 index.html"
   },
   "repository": {
     "type": "git",
@@ -22,7 +27,16 @@
     "handlebars": "4.7.7"
   },
   "devDependencies": {
-    "@parcel/transformer-postcss": "2.6.2"
+    "@anikin/parcel-transformer-handlebars-precompile": "^1.0.1",
+    "@parcel/transformer-postcss": "2.6.2",
+    "parcel-transformer-hbs": "1.0.4",
+    "postcss": "8.4.20",
+    "postcss-css-variables": "^0.18.0",
+    "postcss-import": "^15.1.0",
+    "postcss-mixins": "^9.0.4",
+    "postcss-nested": "^6.0.0",
+    "rimraf": "3.0.2",
+    "tailwindcss": "3.2.4"
   },
   "type": "module"
 }
