basic setup: -- fix structure -- add basic styles -- rearrange dependencies

--- a/.parcelrc
+++ b/.parcelrc
@@ -4,7 +4,7 @@
 	],
 	"transformers": {
 		"*.hbs": [
-		  "@anikin/parcel-transformer-handlebars-precompile"
+		  "parcel-transformer-hbs"
 		],
 	},
 	"optimizers": {
