--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "source": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist && rimraf .parcel-cache && npm install && parcel build src/index.html",
-    "rebuild": "rimraf dist && rimraf node_modules && npm install && parcel build src/index.html",
+    "build": "parcel build src/index.html",
+    "rebuild": "rimraf dist && rimraf node_modules && rimraf .parcel-cache && npm install && parcel build src/index.html",
     "server": "node server.js",
     "start": "npm run build && npm run server",
     "dev": "npm run build && parcel --port 5555 src/index.html"
@@ -40,6 +40,7 @@
     "postcss-normalize": "10.0.1",
     "postcss-preset-env": "7.8.3",
     "rimraf": "3.0.2",
+    "sass": "1.57.1",
     "tailwindcss": "3.2.4"
   },
   "type": "commonjs",
