--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "rebuild": "rimraf dist && rimraf node_modules && rimraf .parcel-cache && npm install && parcel build src/index.html",
     "server": "node server.js",
     "start": "npm run build && npm run server",
-    "dev": "npm run build && parcel --port 5555 src/index.html"
+    "dev": "npm run build && parcel --port 5555 src/index.html",
+    "lint": "eslint . --ext .js,.hbs --ignore-pattern \"/node_modules/\" --ignore-pattern \"/dist/\" --fix"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,12 @@
     "@parcel/transformer-html": "2.8.2",
     "@parcel/transformer-postcss": "2.6.2",
     "@parcel/transformer-sass": "2.8.2",
+    "@typescript-eslint/eslint-plugin": "5.47.1",
+    "eslint": "8.30.0",
+    "eslint-config-standard-with-typescript": "24.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "15.6.0",
+    "eslint-plugin-promise": "6.1.1",
     "normalize.css": "8.0.1",
     "parcel-transformer-hbs": "1.0.4",
     "postcss": "8.4.20",
@@ -41,7 +48,8 @@
     "postcss-preset-env": "7.8.3",
     "rimraf": "3.0.2",
     "sass": "1.57.1",
-    "tailwindcss": "3.2.4"
+    "tailwindcss": "3.2.4",
+    "typescript": "4.9.4"
   },
   "type": "commonjs",
   "browserslist": [
