new features: -- add EventBus -- add block -- add message input in chat

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,13 @@
         "strictNullChecks": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
+        "lib": [
+            "dom",
+            "es5",
+            "scripthost",
+            "es2015.proxy",
+            "es2017"
+        ]
     },
     "exclude": [
         "node_modules"
