--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "postcss-preset-env": "7.8.3",
         "rimraf": "3.0.2",
         "sass": "1.57.1",
+        "stylelint": "14.16.1",
         "tailwindcss": "3.2.4",
         "typescript": "4.9.4"
     },
