--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,12 +1,15 @@
 {
-  "extends": "stylelint-config-standard",
+    "plugins": [
+        "stylelint-scss"
+    ],
+    "extends": "stylelint-config-recommended-scss",
   "rules": {
     "color-hex-case": "lower",
     "selector-class-pattern": null,
     "string-quotes": "single",
-      "max-empty-lines": 1,
-      "at-rule-no-unknown": null,
-      "no-descending-specificity": null
+    "max-empty-lines": 1,
+    "scss/at-rule-no-unknown": null,
+    "no-descending-specificity": null
   },
   "ignoreFiles": [
     "dist/*",
