--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "rimraf": "3.0.2",
         "sass": "1.57.1",
         "stylelint": "14.16.1",
+        "stylelint-config-recommended-scss": "8.0.0",
         "stylelint-config-standard": "29.0.0",
         "tailwindcss": "3.2.4",
         "typescript": "4.9.4"
