--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "source": "index.html",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "parcel build src/index.html",
+        "build": "parcel build src/index.html --no-cache  --no-source-maps --public-url ./",
         "rebuild": "rimraf dist && rimraf node_modules && rimraf .parcel-cache && npm install && parcel build src/index.html",
         "server": "node server.js",
         "start": "npm run build && npm run server",
-        "dev": "npm run build && parcel --port 5555 src/index.html --open",
+        "dev": "npm run build && parcel --port 5555 src/index.html --no-cache --open",
         "lint": "eslint . --ext .js,.hbs --ignore-pattern \"/node_modules/\" --ignore-pattern \"/dist/\" --fix"
     },
     "repository": {
