--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "assert": "^2.0.0",
         "browserify-zlib": "^0.2.0",
         "buffer": "^5.7.1",
+        "console-browserify": "^1.2.0",
         "crypto-browserify": "^3.12.0",
         "eslint": "8.30.0",
         "eslint-config-standard-with-typescript": "24.0.0",
