--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "praktikum",
     "version": "0.0.1",
-    "description": " Sprint II ",
+    "description": " Sprint III ",
     "source": "index.html",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,27 +25,22 @@
     "homepage": "https://github.com/wellingt21/middle.messenger.praktikum.yandex#readme",
     "dependencies": {
         "express": "4.18.1",
-        "handlebars": "4.7.7"
+        "handlebars": "4.7.7",
+        "nanoid": "4.0.0",
+        "parcel-bundler": "1.12.5"
     },
     "devDependencies": {
         "@parcel/transformer-html": "2.8.2",
         "@parcel/transformer-postcss": "2.6.2",
         "@parcel/transformer-sass": "2.8.2",
         "@typescript-eslint/eslint-plugin": "5.47.1",
-        "assert": "^2.0.0",
-        "browserify-zlib": "^0.2.0",
-        "buffer": "^5.7.1",
-        "console-browserify": "^1.2.0",
-        "crypto-browserify": "^3.12.0",
         "eslint": "8.30.0",
         "eslint-config-standard-with-typescript": "24.0.0",
         "eslint-plugin-import": "2.26.0",
         "eslint-plugin-n": "15.6.0",
         "eslint-plugin-promise": "6.1.1",
-        "events": "^3.3.0",
         "normalize.css": "8.0.1",
         "parcel-transformer-hbs": "1.0.4",
-        "path-browserify": "^1.0.1",
         "postcss": "8.4.20",
         "postcss-css-variables": "0.18.0",
         "postcss-import": "15.1.0",
@@ -53,21 +48,13 @@
         "postcss-nested": "6.0.0",
         "postcss-normalize": "10.0.1",
         "postcss-preset-env": "7.8.3",
-        "process": "^0.11.10",
-        "punycode": "^1.4.1",
-        "querystring-es3": "^0.2.1",
         "rimraf": "3.0.2",
         "sass": "1.57.1",
-        "stream-browserify": "^3.0.0",
-        "stream-http": "^3.2.0",
-        "string_decoder": "^1.3.0",
         "stylelint": "14.16.1",
         "stylelint-config-recommended-scss": "8.0.0",
         "stylelint-config-standard": "29.0.0",
         "tailwindcss": "3.2.4",
-        "typescript": "4.9.4",
-        "url": "^0.11.0",
-        "util": "^0.12.5"
+        "typescript": "4.9.4"
     },
     "type": "commonjs",
     "browserslist": [
