--- a/.parcelrc
+++ b/.parcelrc
@@ -4,7 +4,7 @@
 	],
 	"transformers": {
 		"*.hbs": [
-		  ["@anikin/parcel-transformer-handlebars-precompile"]
+		    "@anikin/parcel-transformer-handlebars-precompile"
 		],
 	},
 	"optimizers": {
