--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "parcel-bundler": "1.12.5"
     },
     "devDependencies": {
+        "@anikin/parcel-transformer-handlebars-precompile": "1.0.1",
         "@parcel/transformer-html": "2.8.2",
         "@parcel/transformer-postcss": "2.6.2",
         "@parcel/transformer-sass": "2.8.2",
@@ -53,7 +54,6 @@
         "stylelint": "14.16.1",
         "stylelint-config-recommended-scss": "8.0.0",
         "stylelint-config-standard": "29.0.0",
-        "tailwindcss": "3.2.4",
         "typescript": "4.9.4"
     },
     "type": "commonjs",
