--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,15 @@
         "target": "esnext",
         "rootDir": "./src",
         "typeRoots": ["node_modules/@types", "types/app.d.ts"],
-        "strict": true,
-        "sourceMap": true,
-        "noImplicitAny": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
+//        "strict": true,
+//        "sourceMap": true,
+//        "noImplicitAny": true,
+//        "noUnusedLocals": true,
+//        "noUnusedParameters": true,
         "strictNullChecks": true,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": false,
+        //        "noImplicitReturns": true,
+//        "noFallthroughCasesInSwitch": true,
         "lib": [
             "dom",
             "es5",
